Got the other treemaps fixed by added their names to the platformColors variable. Also, made the text wrap in the box.

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ html, body {
   justify-content: center; /* Horizontally centers the content */
   align-items: center; /* Vertically centers the content */
   flex-direction: column;
-
+  background-color: bisque;
 }
 
 #title, #description {
@@ -29,4 +29,10 @@ svg {
   max-width: 100%;
   height: auto;
   margin: 0 auto;
+}
+
+text {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
